feat: 게시글 수정 버튼 추가
사용자가 작성한 게시글을 수정할 수 있는 버튼, 메소드 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -404,6 +404,12 @@ tbody td {
   justify-content: right;
 }
 
+.info-between {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .detail-info-label {
   font-family: "GmarketSansMedium";
   font-weight: 400;
@@ -463,6 +469,16 @@ tbody td {
   color: #fff;
   background-color: #76c5d7;
   padding: 5px 16px;
+}
+
+.edit-btn {
+  border: none;
+  border-radius: 10px;
+  font-family: "GmarketSansMedium";
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+  padding: 9px 16px 7px;
 }
 
 .stickers {
